--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "LS Windows",
+  "name": "lswindows",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "lswindows.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node lswindows.js"
   },
   "keywords": [],
   "author": "Brandon Voth",
   "license": "MIT",
   "bin": {
-    "ls": "app.js"
+    "ls": "lswindows.js"
   }
 }
